added researcher_id, added getGamePoints, added getGames, updated GameResponse